fixed spacing

--- a/index.css
+++ b/index.css
@@ -369,6 +369,10 @@ h3 {
   margin-top: 60px;
 }
 
+#about {
+  margin-top: 30px;
+}
+
 .about-me {
   margin-bottom: 40px;
 }
@@ -410,6 +414,10 @@ h3 {
 
 .fa-react {
   color: #33ccff;
+}
+
+#projects {
+  margin-top: 30px;
 }
 
 .icon {
@@ -514,7 +522,6 @@ h3 {
 .footer {
   position: absolute;
   width: 100%;
-  margin-top: 10px;
   left: 0;
   right: 0;
 }
